[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game/Assets/Fonts/OpenSans/OpenSans-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/MainMenu/SinglePlayerMenu/SinglePlayerMenu.gd" type="Script" id=2]
[ext_resource path="res://Menus/MainMenu/Assets/Sprites/LeftTriangle.bmp" type="Texture" id=3]
[ext_resource path="res://Menus/MainMenu/Assets/Sprites/RightTriangle.bmp" type="Texture" id=4]
[ext_resource path="res://Menus/Assets/MenuFont.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 1 )

[node name="SinglePlayerMenu" type="Control"]
anchor_left = 0.289
anchor_top = 0.049
anchor_right = 0.701
anchor_bottom = 0.951
margin_left = 0.605957
margin_top = 535.712
margin_right = -0.0637207
margin_bottom = -159.712
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SinglePlayerLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.998
margin_left = 64.0002
margin_top = 32.0
margin_right = -471.0
margin_bottom = -444.822
custom_fonts/font = SubResource( 1 )
text = "Single Player Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Control" parent="."]
anchor_left = 0.064
anchor_top = 0.18
anchor_right = 0.56
anchor_bottom = 1.0
margin_left = -0.064003
margin_top = 0.159996
margin_right = -0.559998
margin_bottom = -264.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="Level"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Level Select"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelName" type="Label" parent="Level"]
anchor_top = 0.353
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.00800323
margin_right = 0.000976563
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "test_track"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLeft" type="Button" parent="Level"]
anchor_top = 0.353
anchor_right = 0.258
anchor_bottom = 1.0
margin_left = 48.0
margin_top = 7.992
margin_right = 16.0322
margin_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.75, 0.75 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 0
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
align = 2
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelRight" type="Button" parent="Level"]
anchor_left = 0.742
anchor_top = 0.353
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.96869
margin_top = 7.992
margin_right = -23.999
margin_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.75, 0.75 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Laps" type="Control" parent="."]
anchor_left = 0.064
anchor_top = 0.18
anchor_right = 0.56
anchor_bottom = 1.0
margin_left = -0.064003
margin_top = 136.16
margin_right = -32.56
margin_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LapsLabel" type="Label" parent="Laps"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 0.0200043
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Number of Laps"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumLaps" type="Label" parent="Laps"]
anchor_top = 0.333
anchor_right = 1.0
anchor_bottom = 1.067
margin_left = 6.10352e-05
margin_top = 0.0400009
margin_right = 6.10352e-05
margin_bottom = -0.0400085
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LapsDecrease" type="Button" parent="Laps"]
anchor_top = 0.333
anchor_right = 0.276
anchor_bottom = 1.068
margin_left = 48.0
margin_top = 8.04
margin_right = 15.936
margin_bottom = 15.84
grow_horizontal = 0
grow_vertical = 2
rect_scale = Vector2( 0.75, 0.75 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 0
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
align = 2
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LapsIncrease" type="Button" parent="Laps"]
anchor_left = 0.793
anchor_top = 0.333
anchor_right = 1.069
anchor_bottom = 1.067
margin_left = 8.04797
margin_top = 8.04
margin_right = -24.016
margin_bottom = 15.96
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.75, 0.75 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 3
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCs" type="Control" parent="."]
anchor_left = 0.064
anchor_top = 0.18
anchor_right = 0.56
anchor_bottom = 1.0
margin_left = -0.064003
margin_top = 256.16
margin_right = -31.56
margin_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCsLabel" type="Label" parent="NPCs"]
anchor_right = 1.0
anchor_bottom = 1.143
margin_bottom = -0.0160065
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Number of NPCs"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumNPCs" type="Label" parent="NPCs"]
anchor_top = 0.357
anchor_right = 1.0
anchor_bottom = 1.143
margin_top = 0.0159988
margin_bottom = -0.0160065
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "11"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCDecrease" type="Button" parent="NPCs"]
anchor_top = 0.357
anchor_right = 0.275
anchor_bottom = 1.143
margin_left = 48.0001
margin_top = 8.016
margin_right = 16.1251
margin_bottom = 13.984
grow_horizontal = 0
grow_vertical = 2
rect_scale = Vector2( 0.75, 0.75 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 0
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
align = 2
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCIncrease" type="Button" parent="NPCs"]
anchor_left = 0.791
anchor_top = 0.357
anchor_right = 1.067
anchor_bottom = 1.143
margin_left = 8.185
margin_top = 8.016
margin_right = -24.155
margin_bottom = 15.984
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.75, 0.75 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 3
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="GridContainer" parent="."]
anchor_left = 0.559
anchor_top = 0.18
anchor_right = 0.999
anchor_bottom = 1.0
margin_left = 0.4422
margin_top = 290.16
margin_right = -62.9969
margin_bottom = -15.9999
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 8
custom_constants/vseparation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RaceButton" type="Button" parent="Buttons"]
margin_right = 400.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
shortcut_in_tooltip = false
action_mode = 0
text = "Race"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPickerButton" parent="."]
anchor_right = 1.001
anchor_bottom = 1.0
margin_left = 675.554
margin_top = 121.728
margin_right = -179.55
margin_bottom = -233.728
size_flags_horizontal = 10
toggle_mode = false
shortcut_in_tooltip = false
align = 0
color = Color( 0.184314, 0.788235, 1, 1 )
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Level/LevelLeft" to="." method="_level_select_left"]
[connection signal="button_down" from="Level/LevelRight" to="." method="_level_select_right"]
[connection signal="pressed" from="Laps/LapsDecrease" to="." method="_decrease_lap_amount"]
[connection signal="pressed" from="Laps/LapsIncrease" to="." method="_increase_lap_amount"]
[connection signal="button_down" from="NPCs/NPCDecrease" to="." method="_decrease_NPC_amount"]
[connection signal="button_down" from="NPCs/NPCIncrease" to="." method="_increase_NPC_amount"]
[connection signal="pressed" from="Buttons/RaceButton" to="." method="_start_race"]
[connection signal="color_changed" from="ColorPicker" to="." method="_select_color"]
